--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,10 +4,10 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-  - main
+  - master
 
 pool:
-  vmImage: Hosted Ubuntu 1604
+  vmImage: ubuntu-latest
 
 variables:
   buildConfiguration: "Release"
@@ -15,44 +15,19 @@ variables:
 name: "$(BuildDefinitionName)_$(Year:yyyy).$(Month).$(DayOfMonth)$(Rev:.r)"
 
 steps:
-- task: DotNetCoreCLI@2
-  displayName: Restore
-  inputs:
-    command: restore
-    projects: '$(Parameters.RestoreBuildProjects)'
-  enabled: false
+  - script: dotnet build --configuration $(buildConfiguration)
+    displayName: "dotnet build $(buildConfiguration)"
 
-- task: DotNetCoreCLI@2
-  displayName: Build
-  inputs:
-    projects: '$(Parameters.RestoreBuildProjects)'
-    arguments: '--configuration $(BuildConfiguration)'
+  - task: DotNetCoreCLI@2
+    displayName: "dotnet pack"
+    inputs:
+      command: pack
+      packagesToPack: "**/*.csproj"
+      nobuild: true
+      versioningScheme: byBuildNumber
 
-- task: DotNetCoreCLI@2
-  displayName: Test
-  inputs:
-    command: test
-    projects: '$(Parameters.TestProjects)'
-    arguments: '--configuration $(BuildConfiguration)'
-
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet pack'
-  inputs:
-    command: pack
-    packagesToPack: GenericHost.Castle/GenericHost.Castle.csproj
-    nobuild: true
-    versioningScheme: byEnvVar
-    versionEnvVar: VersionNumber
-
-- task: NuGetCommand@2
-  displayName: 'NuGet package push - nuget.org'
-  inputs:
-    command: push
-    nuGetFeedType: external
-    publishFeedCredentials: NugetServer
-
-- task: NuGetCommand@2
-  displayName: "NuGet package push - artifacts"
-  inputs:
-    command: push
-    publishVstsFeed: "44a39daa-4ef7-44f6-9a6d-1758786062ba"
+  - task: NuGetCommand@2
+    displayName: "NuGet package push - artifacts"
+    inputs:
+      command: push
+      publishVstsFeed: "44a39daa-4ef7-44f6-9a6d-1758786062ba"
